# audio_otio_composer

./: .gitignore  LICENCE  README.md  README_EN.md  audio_to_timeline.py  otio_generator.py  otio_gui.py  pyproject.toml  test_audio_to_timeline.py
audio_composer/composer/: audio_to_timeline.py  greedy_heapsort_composer.py  scanline_composer.py
audio_composer/models/: audioclip.py  audiotrack.py
davinci_resolve/metadata_manager/: fx_generator.py
davinci_resolve/models/: resolve_fx.py
models/: audioclip.py  audiotrack.py
opentimelineio/: __init__.pyi
opentimelineio/_opentime/: __init__.pyi
opentimelineio/_otio/: __init__.pyi
opentimelineio/adapters/: __init__.pyi
opentimelineio/algorithms/: stack_algo.pyi
opentimelineio/core/: __init__.pyi  _core_utils.pyi
opentimelineio/schema/: __init__.pyi  clip.pyi  image_sequence_reference.pyi  serializable_collection.pyi
tests/: test_audio_to_timeline.py
