[project]
name = "audio_otio_composer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "ipdb>=0.13.13",
    "opentimelineio>=0.17.0",
    "pybind11-stubgen>=2.5.1",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "wavinfo>=3.1.0",
]
